# cdeg

./: .envrc  Cargo.toml  flake.nix
src/: lib.rs  main.rs
src/merkle/: mod.rs
